--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600&family=Poppins:wght@400;500&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>Birthday Card 🎂 </title>
+    <title>Birthday Card 🎂</title>
 </head>
 <body>
     <div class="card-one">
@@ -23,7 +23,7 @@
             <h2>Mi primer añito</h2>
             <h3>Te espero!</h3>
             <p>Colocá la clave, accede a la dire del lugar y confirma tu asistencia 🤭</p>
-            <form action="">
+            <form name="" action="">
                 <p>
                     <label> 
                         <input type="password" name="pass" id="pass">
